# transcriptor

./: .gitignore  Cargo.toml  README.md  config.example.toml
docs/: infraestructura_y_uinput.md
src/: main.rs
src/api/: groq.rs
src/audio/: capture.rs
src/config/: mod.rs
src/input/: listener.rs  mod.rs  state_machine.rs
src/output/: clipboard.rs  mod.rs  typer.rs
src/pipeline/: mod.rs  robust.rs
