[package]
name = "transcriptor"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
bytes = "1.11.1"
dotenvy = "0.15.7"
enigo = { version = "0.6.1", features = ["wayland"] }
evdev = "0.13.2"
futures = "0.3.32"
lazy_static = "1.5.0"
reqwest = { version = "0.13.2", features = ["multipart", "json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "rt", "macros", "sync", "time", "process", "signal", "io-util"] }
toml = "1.0.6"
uinput = "0.1.3"
